[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Tools/Syringe/Syringe Body.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tools/Syringe/Syringe Plunger.png" type="Texture" id=2]
[ext_resource path="res://Assets/Tools/Syringe/Pink FLuid.png" type="Texture" id=3]
[ext_resource path="res://Tools/Syringe/Syringe.gd" type="Script" id=4]
[ext_resource path="res://Assets/Tools/Syringe/Blue Fluid.png" type="Texture" id=5]
[ext_resource path="res://Assets/Tools/Syringe/Yellow fluid.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 51.3235, 10.9667 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.66687, 21.8208 )

[node name="Syringe" type="Node2D"]
position = Vector2( 591.642, 55.2319 )
script = ExtResource( 4 )

[node name="Body" type="Sprite" parent="."]
position = Vector2( 403.139, 461.799 )
scale = Vector2( 0.303711, 0.375 )
z_index = 2
texture = ExtResource( 1 )

[node name="BlueFluid" type="Sprite" parent="."]
position = Vector2( 406.693, 459.496 )
scale = Vector2( 0.330132, 0.383816 )
texture = ExtResource( 5 )

[node name="YellowFluid" type="Sprite" parent="."]
position = Vector2( 406.693, 459.496 )
scale = Vector2( 0.330132, 0.383816 )
texture = ExtResource( 6 )

[node name="PinkFluid" type="Sprite" parent="."]
position = Vector2( 406.693, 459.496 )
scale = Vector2( 0.330132, 0.383816 )
texture = ExtResource( 3 )

[node name="Plunger" type="Sprite" parent="."]
position = Vector2( 307.217, 433.949 )
scale = Vector2( 0.305518, 0.324499 )
z_index = 1
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Plunger"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plunger/Area2D"]
position = Vector2( 183.98, 559.906 )
shape = SubResource( 1 )

[node name="Tip" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tip"]
position = Vector2( 365.441, 649.839 )
shape = SubResource( 2 )
[connection signal="area_entered" from="Plunger/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Plunger/Area2D" to="." method="_on_Area2D_area_exited"]
